--- a/src/Card.css
+++ b/src/Card.css
@@ -3,16 +3,71 @@
     padding: 0;
     box-sizing: border-box;
 }
-.Container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 1rem 20rem;
+.wrapper{
+  background-color: blue;
 }
-.box{
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 150px;
+    height: 180px;
+    /* perspective: 1000px; */
+    margin: 1rem;
+   
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #e07e0d;
+    color: black;
     height: 180px;
     width: 150px;
-    background-color: blueviolet;
-    margin: 0.5rem;
-    border-radius: 0.5rem;
-}
+  }
+  .flip-card-front img{
+    height: 100%;
+    width: 100%;
+  }
+  
+  .flip-card-back {
+    background-color: #b93329;
+    color: white;
+    transform: rotateY(180deg);
+    height: 180px;
+    width: 150px;
+  }
+ .flip-card-back img{
+  height: 100%;
+    width: 100%;
+ }
+  
+  
